; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_pdfpages.c_showpages.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_pdfpages.c_showpages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i8*)* @showpages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @showpages(i32* %0, i32* %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8* %3, i8** %8, align 8
  store i32 0, i32* %13, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %18, label %16

16:                                               ; preds = %4
  %17 = call i32 (...) @infousage()
  br label %18

18:                                               ; preds = %16, %4
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @pdf_count_pages(i32* %19, i32* %20)
  store i32 %21, i32* %12, align 4
  br label %22

22:                                               ; preds = %53, %18
  %23 = load i32*, i32** %5, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = load i32, i32* %12, align 4
  %26 = call i8* @fz_parse_page_range(i32* %23, i8* %24, i32* %10, i32* %11, i32 %25)
  store i8* %26, i8** %8, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %54

28:                                               ; preds = %22
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %11, align 4
  %31 = icmp sgt i32 %29, %30
  br i1 %31, label %32, label %36

32:                                               ; preds = %28
  %33 = load i32, i32* %10, align 4
  store i32 %33, i32* %9, align 4
  %34 = load i32, i32* %11, align 4
  store i32 %34, i32* %10, align 4
  %35 = load i32, i32* %9, align 4
  store i32 %35, i32* %11, align 4
  br label %36

36:                                               ; preds = %32, %28
  %37 = load i32, i32* %10, align 4
  store i32 %37, i32* %9, align 4
  br label %38

38:                                               ; preds = %50, %36
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* %11, align 4
  %41 = icmp sle i32 %39, %40
  br i1 %41, label %42, label %53

42:                                               ; preds = %38
  %43 = load i32*, i32** %5, align 8
  %44 = load i32*, i32** %6, align 8
  %45 = load i32*, i32** %7, align 8
  %46 = load i32, i32* %9, align 4
  %47 = call i32 @showpage(i32* %43, i32* %44, i32* %45, i32 %46)
  %48 = load i32, i32* %13, align 4
  %49 = or i32 %48, %47
  store i32 %49, i32* %13, align 4
  br label %50

50:                                               ; preds = %42
  %51 = load i32, i32* %9, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %9, align 4
  br label %38

53:                                               ; preds = %38
  br label %22

54:                                               ; preds = %22
  %55 = load i32, i32* %13, align 4
  ret i32 %55
}

declare dso_local i32 @infousage(...) #1

declare dso_local i32 @pdf_count_pages(i32*, i32*) #1

declare dso_local i8* @fz_parse_page_range(i32*, i8*, i32*, i32*, i32) #1

declare dso_local i32 @showpage(i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
